--- a/TraversalCoreProje/TraversalCoreProje.csproj
+++ b/TraversalCoreProje/TraversalCoreProje.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Member\Data\" />
+    <Folder Include="wwwroot\userimages\" />
   </ItemGroup>
 
 </Project>
