74.ders sonu CQRS

--- a/TraversalCoreProje/TraversalCoreProje.csproj
+++ b/TraversalCoreProje/TraversalCoreProje.csproj
@@ -49,6 +49,10 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Member\Data\" />
+    <Folder Include="CQRS\Commands\GuideCommands\" />
+    <Folder Include="CQRS\Handlers\GuideHandlers\" />
+    <Folder Include="CQRS\Queries\GuideQueries\" />
+    <Folder Include="CQRS\Results\GuideResult\" />
     <Folder Include="wwwroot\pdfreports\" />
     <Folder Include="wwwroot\userimages\" />
   </ItemGroup>
